Fixed login and logout routes
