# routes/api.php
@@ -1,5 +1,8 @@
 <?php
 
+use App\Actions\Authentication\LoginFarmer;
+use App\Actions\Authentication\LogoutFarmer;
+
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -13,7 +16,7 @@
 
 use Illuminate\Support\Facades\Route;
 
-Route::group(['prefix' => 'farmer', 'as' => 'api.', 'namespace' => 'App\Http\Controllers\Api'], function () {
-    Route::post('/login', 'AuthenticationController@login')->name('login');
-    Route::post('/logout', 'AuthenticationController@logout')->name('logout');
+Route::group(['prefix' => 'auth', 'as' => 'api.'], function () {
+    Route::post('/login', LoginFarmer::class)->name('login');
+    Route::post('/logout', LogoutFarmer::class)->name('logout')->middleware('auth:api');
 });
